Minor bleeding edges fix, fix #32

--- a/assets/scss/panelbar.scss
+++ b/assets/scss/panelbar.scss
@@ -179,10 +179,11 @@
 
   &--bg {
     position: absolute;
-    top: 15px;
-    right: 17px;
+    top: 17px;
+    right: 19px;
     z-index: 1201;
     color: transparent;
+    font-size: .8em;
   }
 }
 
